@@ -1,10 +1,11 @@
 <!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 <beans>
     <bean id="manager" class="edu.mcw.rgd.rnacentral.Main">
-        <property name="version" value="RNACentral pipeline   -- build Dec 09, 2024" />
+        <property name="version" value="RNACentral pipeline   -- build Jan 06, 2025" />
         <property name="pipelineName" value="RNACentral" />
         <property name="xdbKeyForRNACentral" value="68" />
         <property name="refSeqMappingFile" value="ftp://ftp.ebi.ac.uk/pub/databases/RNAcentral/current_release/id_mapping/database_mappings/refseq.tsv"/>
         <property name="rgdMappingFile"    value="ftp://ftp.ebi.ac.uk/pub/databases/RNAcentral/current_release/id_mapping/database_mappings/rgd.tsv"/>
+        <property name="ensemblMappingFile" value="ftp://ftp.ebi.ac.uk/pub/databases/RNAcentral/current_release/id_mapping/database_mappings/ensembl.tsv"/>
     </bean>
 </beans>
